# binance-strategy

./: README.md  async_bot.py  bot.py  config.py  history_logger.py  main.py  margin_trader.py  position_manager.py  pyproject.toml  run_bot.sh  run_bot_async.sh  strategy.py
analytics/: ETHUSDT_2025-05-04_trades.csv  FLMUSDT_2025-05-04_trades.csv  FLMUSDT_2025-05-05_trades.csv  FLMUSDT_2025-05-06_trades.csv  NKNUSDT_2025-05-05_trades.csv  NKNUSDT_2025-05-06_trades.csv  ONTUSDT_2025-05-05_trades.csv  ONTUSDT_2025-05-06_trades.csv  SOLUSDT_2025-05-04_trades.csv  XLMUSDT_2025-05-05_trades.csv  XRPUSDT_2025-05-04_trades.csv
backtester/: backtest_zscore_spread.py  test.csv
binancetools/: BTCUSDT_spot_1s.csv  binance_1s_downloader.py  binance_data_fetcher.py
bot/: bot.py  config.py  final_bot.py  final_strategy.py  futures_trader.py  history_logger.py  main_with_monitor.py  margin_trader.py  order_manager.py  position_manager.py  strategy.py  utils.py
bot_package/: config.py  final_config.py  live_monitor.py  main.py  margin_trader.py  position_manager.py  status_store.py  strategy.py
live_bot/: async_bot.py  async_main.py  bot.py  config.py  futures_trader.py  main.py  margin_trader.py  spread_model.py  strategy.py  utils.py
